K8S/command-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-depl
spec:
  replicas: 1
  # Select the template that gets created below (the deployment)
  selector:
    matchLabels:
      app: command-service
  # Define the pod and the container (defining the deployment)
  template:
    metadata:
      labels:
        app: command-service
    spec:
      containers:
        - name: command-service
          image: ismailchbiki/command-service-api:v1
---
apiVersion: v1
kind: Service
metadata:
  name: command-clusterip-srv
spec:
  # ClusterIP type is for the internal communication between apps (pods) within the same cluster
  type: ClusterIP
  selector:
    app: command-service
  ports:
    - name: command-service
      protocol: TCP
      port: 80
      targetPort: 80
