K8S/kiteschool-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiteschool-depl
  namespace: enterprise-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiteschool-service
  template:
    metadata:
      labels:
        app: kiteschool-service
    spec:
      containers:
        - name: kiteschool-service
          image: ismailchbiki/kiteschool-service-amd64:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: dockerhub-secret
---
apiVersion: v1
kind: Service
metadata:
  name: kiteschool-clusterip-srv
  namespace: enterprise-app
spec:
  type: ClusterIP
  selector:
    app: kiteschool-service
  ports:
    - name: kiteschool-service
      protocol: TCP
      port: 80
      targetPort: 80
