K8S/mysql-plat-depl.yaml
# DEFINING MYSQL DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  # Name of this deployment
  name: mysql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            # Where the db and data will reside
            - mountPath: /var/lib/mysql
              # name of db
              name: mysqldb
      volumes:
        - name: mysqldb
          persistentVolumeClaim:
            claimName: mysql-claim
---
# CREATING THE CLUSTER IP ADDRESS (For internal communication)
apiVersion: v1
kind: Service
metadata:
  name: mysql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
---
# ENABLING THE DIRECT ACCESS TO THE MYSQL DB FROM THE DESKTOP (using a LoadBalancer)
apiVersion: v1
kind: Service
metadata:
  name: mysql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
