K8S/platform-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-depl
spec:
  replicas: 1
  # Select the template that gets created below (the deployment)
  selector:
    matchLabels:
      app: platform-service
  # Define the pod and the container (defining the deployment)
  template:
    metadata:
      labels:
        app: platform-service
    spec:
      containers:
        - name: platform-service
          image: ismailchbiki/platform-service-api:v1
---
apiVersion: v1
kind: Service
metadata:
  name: platform-clusterip-srv
spec:
  # ClusterIP type is for the internal communication between apps (pods) within the same cluster
  type: ClusterIP
  selector:
    app: platform-service
  ports:
    - name: platform-service
      protocol: TCP
      port: 80
      targetPort: 80
