K8S/platforms-nodport-service.yaml
apiVersion: v1
kind: Service
metadata:
  # The name that this service will be known by (when needed to be used in the cmd line)
  name: platformnpservice-srv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      # port on the Nod port
      port: 80
      # Port of the Service we want to talk to
      targetPort: 80
