K8S/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
  namespace: enterprise-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: ismailchbiki/user-service-amd64:v1
          imagePullPolicy: Always
      imagePullSecrets:
        - name: dockerhub-secret
---
apiVersion: v1
kind: Service
metadata:
  name: platform-clusterip-srv
  namespace: enterprise-app
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - name: user-service
      protocol: TCP
      port: 80
      targetPort: 80
    - name: platform-grpc
      protocol: TCP
      port: 666
      targetPort: 666
